[tool.poetry]
name = "sneakerbot"
version = "0.1.0"
description = ""
authors = ["EatingSugar <whiteleya-y15@mgs.org>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
selenium = "^3.141"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
